[package]
name = "aoc2022"
version = "1.0.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
regex = "1.7.0"
lazy_static = "1.4.0"

[[bin]]
name = "day1"
path = "src/day01/day01.rs"

[[bin]]
name = "day2"
path = "src/day02/day02.rs"

[[bin]]
name = "day3"
path = "src/day03/day03.rs"

[[bin]]
name = "day4"
path = "src/day04/day04.rs"

[[bin]]
name = "day5"
path = "src/day05/day05.rs"

[[bin]]
name = "day6"
path = "src/day06/day06.rs"
