[package]
name = "aoc2022"
version = "1.0.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
regex = "1.7.0"
lazy_static = "1.4.0"

[[bin]]
name = "day1"
path = "src/day01/day01.rs"

[[bin]]
name = "day2"
path = "src/day02/day02.rs"

[[bin]]
name = "day3"
path = "src/day03/day03.rs"

[[bin]]
name = "day4"
path = "src/day04/day04.rs"

[[bin]]
name = "day5"
path = "src/day05/day05.rs"

[[bin]]
name = "day6"
path = "src/day06/day06.rs"

[[bin]]
name = "day7"
path = "src/day07/day07.rs"

[[bin]]
name = "day8"
path = "src/day08/day08.rs"

[[bin]]
name = "day9"
path = "src/day09/day09.rs"

[[bin]]
name = "day10"
path = "src/day10/day10.rs"

[[bin]]
name = "day11"
path = "src/day11/day11.rs"
